fixed test so that at can run on linux on windows